发布页初始化

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -6,4 +6,65 @@
     android:layout_height="match_parent"
     tools:context=".post.PostActivity">
 
+    <RelativeLayout
+        android:id="@+id/post_title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/btn_back"
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:gravity="center"
+            android:text="Back"
+            android:textColor="@android:color/holo_blue_light"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/btn_post"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/post_btn_publish"
+            android:gravity="center"
+            android:text="Publish"
+            android:textColor="@android:color/white"
+            android:textSize="20dp" />
+    </RelativeLayout>
+
+    <EditText
+        android:id="@+id/post_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Just share something..."
+        android:minHeight="120dp"
+        android:padding="15dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/post_title_bar" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:orientation="horizontal"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/post_content">
+
+        <hk.hku.cs.picshare.lib.PicImageView
+            android:id="@+id/post_img_first"
+            android:src="@drawable/add"
+            android:scaleType="centerCrop"
+            android:layout_width="120dp"
+            android:layout_height="120dp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
