--- a/app/src/main/res/layout/fragment_picture_list.xml
+++ b/app/src/main/res/layout/fragment_picture_list.xml
@@ -14,13 +14,13 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:text="PicShare~"
-            android:textSize="20dp"
-            android:textColor="@color/main"
-            android:textStyle="bold"
-            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="PicShare~"
+            android:textColor="@color/main"
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/btn_start_post"
@@ -36,5 +36,14 @@
             android:textColor="@android:color/white"
             android:textSize="16dp" />
     </RelativeLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/pic_list_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/picture_list_title_bar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
