--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:foregroundGravity="center">
+    android:foregroundGravity="center"
+    android:background="@color/appback">
 
 
     <Button
