--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,15 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/appback">
 
     <TextView
+        android:id="@+id/ac_textview_tag1"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical|left"
+        android:paddingLeft="40dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:textSize="20sp"
+        android:background="@drawable/textview_settings"
+        android:clickable="true"
+        android:text="My Posts"
+        android:textIsSelectable="false"
+        app:layout_constraintTop_toBottomOf="@+id/ac_textview_userinfo"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:id="@+id/ac_textview_setting"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical|left"
+        android:paddingLeft="40dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/textview_settings"
+        android:clickable="true"
+        android:longClickable="true"
+        android:text="Settings"
+        android:textAlignment="viewStart"
+        android:textIsSelectable="false"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/ac_textview_tag3"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:id="@+id/ac_textview_userinfo"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="#FFFFFF"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:id="@+id/ac_textview_tag2"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="1dp"
+        android:background="@drawable/textview_settings"
+        android:clickable="true"
+        android:gravity="center_vertical|left"
+        android:paddingLeft="40dp"
+        android:text="Entertainment"
+        android:textIsSelectable="false"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/ac_textview_tag1"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <TextView
+        android:id="@+id/ac_textview_tag3"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="1dp"
+        android:background="@drawable/textview_settings"
+        android:clickable="true"
+        android:gravity="center_vertical|left"
+        android:paddingLeft="40dp"
+        android:text="Study"
+        android:textIsSelectable="false"
+        android:textSize="20sp"
+        app:layout_constraintTop_toBottomOf="@+id/ac_textview_tag2"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <ImageView
+        android:id="@+id/image_profile_photo"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="#000000"
+        app:layout_constraintBottom_toBottomOf="@+id/ac_textview_userinfo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.098"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ac_textview_userinfo"
+        app:layout_constraintVertical_bias="0.555"
+        app:srcCompat="@drawable/tab_account_select"
+        tools:srcCompat="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/textview_user_nickname"
+        android:layout_width="135dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="68dp"
+        android:text="Cheng"
+        android:textAlignment="textStart"
+        android:textAllCaps="false"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/image_profile_photo"
+        app:layout_constraintTop_toTopOf="@+id/ac_textview_userinfo" />
+
+    <TextView
+        android:id="@+id/textView_account_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="account"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="12dp"
+        android:text="TextView"
+        app:layout_constraintStart_toEndOf="@+id/image_profile_photo"
+        app:layout_constraintTop_toBottomOf="@+id/textview_user_nickname" />
 </androidx.constraintlayout.widget.ConstraintLayout>
