[ADD] Add Sign UP window

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,7 +43,8 @@
         android:gravity="center"
         android:hint="Name"
         android:inputType="textPersonName"
-        android:minHeight="48dp"
+        android:minHeight="50dp"
+        android:minWidth="250dp"
         android:singleLine="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +60,8 @@
         android:gravity="center"
         android:hint="Password"
         android:inputType="textPassword"
-        android:minHeight="48dp"
+        android:minHeight="50dp"
+        android:minWidth="250dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_username" />
