--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -36,7 +36,8 @@
         android:textIsSelectable="false"
         android:textSize="20sp"
         app:layout_constraintTop_toBottomOf="@+id/ac_textview_tag3"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="0dp"
+        tools:ignore="RtlCompat" />
 
     <TextView
         android:id="@+id/ac_textview_userinfo"
@@ -76,26 +77,12 @@
         app:layout_constraintTop_toBottomOf="@+id/ac_textview_tag2"
         tools:layout_editor_absoluteX="0dp" />
 
-    <ImageView
-        android:id="@+id/image_profile_photo"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:background="#000000"
-        app:layout_constraintBottom_toBottomOf="@+id/ac_textview_userinfo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.098"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ac_textview_userinfo"
-        app:layout_constraintVertical_bias="0.555"
-        app:srcCompat="@drawable/tab_account_select"
-        tools:srcCompat="@tools:sample/avatars" />
-
     <TextView
         android:id="@+id/textview_user_nickname"
         android:layout_width="135dp"
         android:layout_height="38dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="65dp"
         android:text="Cheng"
         android:textAlignment="textStart"
         android:textAllCaps="false"
@@ -109,8 +96,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="15dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/image_profile_photo"
         app:layout_constraintTop_toBottomOf="@+id/textview_user_nickname" />
+
+    <hk.hku.cs.picshare.lib.PicImageView
+        android:id="@+id/image_profile_photo"
+        android:scaleType="fitXY"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="30dp"
+        app:layout_constraintBottom_toBottomOf="@+id/ac_textview_userinfo"
+        app:layout_constraintStart_toStartOf="@+id/ac_textview_userinfo"
+        app:layout_constraintTop_toTopOf="@+id/ac_textview_userinfo"
+        app:layout_constraintVertical_bias="0.5"
+        tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
