--- a/app/src/main/res/layout/activity_image_preview.xml
+++ b/app/src/main/res/layout/activity_image_preview.xml
@@ -7,6 +7,15 @@
     android:background="@android:color/black"
     tools:context=".post.ImagePreviewActivity">
 
+    <hk.hku.cs.picshare.lib.PicImageView
+        android:id="@+id/preview_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <RelativeLayout
         android:id="@+id/preview_title_bar"
         android:layout_width="match_parent"
@@ -48,13 +57,4 @@
                 android:textSize="20dp" />
         </RelativeLayout>
     </RelativeLayout>
-
-    <ImageView
-        android:id="@+id/preview_img"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
