--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,14 +22,14 @@
         app:layout_constraintTop_toBottomOf="@+id/editText_password" />
 
     <EditText
-        android:id="@+id/editText_username"
+        android:id="@+id/editText_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:background="@drawable/login_editview_input"
         android:ems="10"
         android:gravity="center"
-        android:hint="Name"
+        android:hint="email"
         android:inputType="textPersonName"
         android:minHeight="50dp"
         android:minWidth="250dp"
@@ -52,7 +52,7 @@
         android:minWidth="250dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_username" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_email" />
 
     <TextView
         android:id="@+id/textView3"
