--- a/app/src/main/res/layout/fragment_picture_list.xml
+++ b/app/src/main/res/layout/fragment_picture_list.xml
@@ -38,13 +38,19 @@
             android:textSize="16dp" />
     </RelativeLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/pic_list_recyclerview"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/picture_list_title_bar" />
+        app:layout_constraintTop_toBottomOf="@id/picture_list_title_bar" >
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/pic_list_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
